More visible links, fixed paths to posts

--- a/src/layouts/theme.scss
+++ b/src/layouts/theme.scss
@@ -2,7 +2,6 @@
 $md-primary-color: $md-green-700;
 $md-secondary-color: $md-grey-900;
 $md-tertiary-color: $md-grey-700;
-// approx mdworld orange $md-orange-800
 
 .main-container,
 .darker-background {
@@ -10,6 +9,5 @@ $md-tertiary-color: $md-grey-700;
 }
 
 a:link {
-    color: $md-secondary-color;
-    text-decoration: none;
+    color: $md-orange-800;
 }
